--- a/RunCat365/RunCat365.csproj
+++ b/RunCat365/RunCat365.csproj
@@ -33,6 +33,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\docs\images\app_icon.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
