--- a/RunCat365/RunCat365.csproj
+++ b/RunCat365/RunCat365.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Content Include="resources\app_icon.ico" />
+    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.3" />
   </ItemGroup>
 
   <ItemGroup>
