--- a/RunCat365/Properties/UserSettings.settings
+++ b/RunCat365/Properties/UserSettings.settings
@@ -14,11 +14,8 @@
     <Setting Name="FirstLaunch" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="UseGpuForSpeed" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="UseMemoryForSpeed" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="SpeedSource" Type="System.String" Scope="User">
+      <Value Profile="(Default)">CPU</Value>
     </Setting>
   </Settings>
 </SettingsFile>
